--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.11.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.14.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
